@@ -1,0 +1,4 @@
+## A custom startup file for tests
+## Run as if a system Rprofile, so no packages, no assignments
+options(useFancyQuotes = FALSE)
+
